Added Button and TextView into the NavDrawerActivity

--- a/app/src/main/res/layout/content_nd.xml
+++ b/app/src/main/res/layout/content_nd.xml
@@ -9,4 +9,13 @@
         tools:showIn="@layout/app_bar_nd"
         tools:context="org.udg.pds.todoandroid.activity.NavDrawerActivity">
 
+    <TextView
+        android:id="@+id/text_nd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:text="Hello World!"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
